<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:layout_marginTop="2.5dp"
    android:layout_marginBottom="2.5dp"
    tools:context=".Fragments.SchedulerFragment">
    <LinearLayout
        android:layout_marginTop="0dp"
        android:layout_marginBottom="24dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:padding="8dp"
            android:text="@string/my_calendar"
            android:textStyle="bold"
            android:textColor="@color/blue_grey_900"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <CalendarView
            android:id="@+id/calendarView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_marginTop="0dp"
            android:layout_marginBottom="16dp"
            android:gravity="right"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:textStyle="bold"
                android:textColor="@color/white"
                android:backgroundTint="@color/purple_400"
                android:id="@+id/calendar_add_post_btn"
                android:text="@string/calendar_post_add_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:visibility="gone"
            android:id="@+id/calendar_notify_none_post"
            android:textStyle="bold"
            android:textColor="@color/grey_600"
            android:gravity="center"
            android:text="@string/notify_none_postit"
            android:textSize="12sp"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ProgressBar
            android:visibility="gone"
            android:id="@+id/calendar_notify_progress_bar"
            android:layout_width="match_parent"
            android:layout_height="64dp" />

        <android.support.v7.widget.RecyclerView
            android:visibility="gone"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:id="@+id/daily_post_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/item_post_it"/>

    </LinearLayout>
</FrameLayout>