<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:elevation="1.2dp"
    android:layout_marginTop="2.5dp"
    android:layout_marginBottom="2.5dp"
    tools:context=".Fragments.WeatherFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!-- Top Layout -->
        <LinearLayout
            android:elevation="1.2dp"
            android:paddingTop="2.5dp"
            android:paddingBottom="2.5dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="2.5dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/ic_location_on_black_24dp"
                android:layout_width="32dp"
                android:layout_height="32dp" />
            <TextView
                android:id="@+id/weather_notify_location_text"
                android:padding="4dp"
                android:gravity="center|left"
                android:text="@string/notify_location_null"
                android:textStyle="bold"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent" />
            <ImageButton
                android:id="@+id/weather_get_location_btn"
                android:backgroundTint="@color/purple_400"
                android:src="@drawable/ic_location_searching_black_24dp"
                android:layout_width="48dp"
                android:layout_height="48dp" />
        </LinearLayout>

        <!-- Middle Weather -->
        <LinearLayout
            android:id="@+id/weather_backgournd"
            android:elevation="1.2dp"
            android:layout_marginTop="2.5dp"
            android:layout_marginBottom="2.5dp"
            android:background="@color/sunny"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="240dp">
            <RelativeLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp">
                <LinearLayout
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/weather_icon"
                        android:src="@drawable/sun"
                        android:layout_width="100dp"
                        android:layout_height="100dp" />
                    <TextView
                        android:id="@+id/weather_temp"
                        android:gravity="center"
                        android:textSize="48dp"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:text="0"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </RelativeLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="60dp">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">
                    <TextView
                        android:textColor="@color/white"
                        android:textSize="16dp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:text="@string/temp_max_min"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/weather_temp_max_min"
                        android:text="0"
                        android:textColor="@color/white"
                        android:textSize="16dp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </LinearLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">
                    <TextView
                        android:textColor="@color/white"
                        android:textSize="16dp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:text="@string/wind_speed_degree"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/weather_wind_speed_degree"
                        android:text="0"
                        android:textColor="@color/white"
                        android:textSize="16dp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </LinearLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">
                    <TextView
                        android:textColor="@color/white"
                        android:textSize="16dp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:text="@string/rain"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/weather_rain"
                        android:text="0"
                        android:textColor="@color/white"
                        android:textSize="16dp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>